--- a/nlp/install.txt
+++ b/nlp/install.txt
@@ -1,4 +1,4 @@
 pip install nltk
-pip install BeautifulSoup4
-pip install html5lib
-pip install matplotlib
+pip3 install BeautifulSoup4
+pip3 install html5lib
+pip3 install matplotlib
